Add underline to imports to match file names.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,7 +1,7 @@
 @import "imports/_normalize";
 @import "imports/_grid";
-@import "imports/skins";
-@import "imports/globals";
+@import "imports/_skins";
+@import "imports/_globals";
 
 body {
     color: #5f5f5f;
