Allow rendering of url for nav items.

--- a/views/nav.dust
+++ b/views/nav.dust
@@ -4,7 +4,7 @@
         <ul>
             {#embeds.nav}
             <li>
-                <a href='#' class='fast-trans{?selected} selected{/selected}'>{title}</a>
+                <a href='{url}' class='fast-trans{?selected} selected{/selected}'>{title}</a>
             </li>
             {/embeds.nav}
         </ul>
